[package]
name = "protostore"
version = "0.1.0"
authors = ["Knut Nesheim <knutin@gmail.com>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
#libaio = { git = "https://github.com/knutin/libaio-rust.git", branch = "update" }
libaio = { git = "file:///home/knutin/git/libaio-rust", branch = "update" }
chrono = "0.3.0"
mio = "0.6.4"
slab = "0.3.0"
eventfd = { git = "https://github.com/knutin/eventfd-rust.git" }
byteorder = "1.0.0"
uuid = {version = "0.3.1", features = ["v4"]}
rand = "0.3"
clap = "2.20.5"

[[bin]]
name = "run"
path = "src/main.rs"

[[bin]]
name = "mk_data"
path = "src/bin/mk_data.rs"


